Add home app and widget features

--- a/app/src/main/res/layout/main_activity_body.xml
+++ b/app/src/main/res/layout/main_activity_body.xml
@@ -114,6 +114,7 @@
             android:padding="0px"
             android:focusable="false"
             android:focusableInTouchMode="false"
+            android:headerDividersEnabled="true"
             />
     </LinearLayout>
 </LinearLayout>
