--- a/app/src/main/res/layout/preferences_command_widget_list.xml
+++ b/app/src/main/res/layout/preferences_command_widget_list.xml
@@ -2,22 +2,22 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".applicationMain.PreferencesCustomWebActivity"
+    tools:context=".applicationMain.PreferencesWidgetCommandsActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
     android:orientation="vertical"
     >
     <Button
-        android:id="@+id/customURLListAddButton"
+        android:id="@+id/widget_command_add_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/preferences_url_add_button"
+        android:text="@string/preferences_command_widget_command_add"
         android:layout_margin="3dp"
         android:drawableStart="@android:drawable/ic_menu_add"
         />
     <ListView
-        android:id="@+id/customURLList"
+        android:id="@+id/widget_command_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
