--- a/app/src/main/res/layout/preferences_home_screen_add_widget.xml
+++ b/app/src/main/res/layout/preferences_home_screen_add_widget.xml
@@ -2,22 +2,26 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".applicationMain.PreferencesCustomWebActivity"
+    tools:context=".applicationMain.PreferencesHomeScreenItemsActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
     android:orientation="vertical"
     >
-    <Button
-        android:id="@+id/customURLListAddButton"
+    <TextView
+        android:id="@+id/homeScreenAddWidgetLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/preferences_url_add_button"
-        android:layout_margin="3dp"
-        android:drawableStart="@android:drawable/ic_menu_add"
+        android:padding="3sp"
+        android:text="@string/preferences_home_screen_add_widget_select_message"
+        android:textColor="?bluelineconsoleBaseTextColor"
+        android:background="?bluelineconsoleFrameColor"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         />
     <ListView
-        android:id="@+id/customURLList"
+        android:id="@+id/homeScreenSelectWidgetToAdd"
+        android:labelFor="@id/homeScreenAddWidgetLabel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
