--- a/app/src/main/res/layout/main_activity_body.xml
+++ b/app/src/main/res/layout/main_activity_body.xml
@@ -20,6 +20,8 @@
         android:padding="0px"
         android:background="?bluelineconsoleFrameColor"
         android:animateLayoutChanges="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         >
         <EditText
             android:id="@+id/mainInputText"
@@ -48,12 +50,16 @@
         android:padding="0px"
         android:animateLayoutChanges="true"
         android:orientation="vertical"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         >
         <ScrollView
             android:id="@+id/commandSearchWaitingNotification"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             >
             <LinearLayout
                 android:layout_width="match_parent"
