--- a/app/src/main/res/layout/main_activity_body.xml
+++ b/app/src/main/res/layout/main_activity_body.xml
@@ -12,6 +12,7 @@
     android:animateLayoutChanges="true"
     android:focusable="false"
     android:focusableInTouchMode="false"
+    android:clickable="false"
     >
     <LinearLayout
         android:id="@+id/mainInputTextWrapperLinearLayout"
