--- a/app/src/main/res/layout/widget_launcher_marine.xml
+++ b/app/src/main/res/layout/widget_launcher_marine.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/baseWindowMainLayoutRoot"
+    android:id="@+id/widgetLauncherRootLinearLayout"
     android:animateLayoutChanges="true"
     android:focusable="false"
     android:focusableInTouchMode="false"
@@ -26,7 +27,7 @@
         <LinearLayout
             android:id="@+id/baseWindowIntermediateWrapper"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:background="@drawable/marine_main_window"
             android:focusable="false"
@@ -63,7 +64,7 @@
             <LinearLayout
                 android:id="@+id/baseWindowMainLinearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:paddingVertical="6dp"
                 android:paddingHorizontal="10dp"
                 android:layout_marginBottom="18sp"
@@ -73,13 +74,14 @@
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 >
-                <ViewStub
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/baseWindowMainViewStub"
-                    android:animateLayoutChanges="true"
+                    android:layout_height="match_parent"
+                    android:textColor="?bluelineconsoleBaseTextColor"
+                    android:background="?android:colorBackground"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
+                    android:clickable="false"
                     />
             </LinearLayout>
             <!--
@@ -116,4 +118,4 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
