--- a/app/src/main/res/layout/widget_launcher_old_computer.xml
+++ b/app/src/main/res/layout/widget_launcher_old_computer.xml
@@ -56,8 +56,8 @@
                 android:textColor="?bluelineconsoleFrameTextColor"
                 android:textStyle="bold"
                 android:layout_gravity="start"
-                android:text=""
-                android:textSize="12sp"
+                android:text="@string/app_name"
+                android:textSize="12dp"
                 android:paddingHorizontal="6sp"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
