Switch instead of SwitchCompat
Switch is supported from API 14. Current minimum support version is 22
which is newer. So no need to use SwitchCompat.

--- a/app/src/main/res/layout/preferences_command_widget_each.xml
+++ b/app/src/main/res/layout/preferences_command_widget_each.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:importantForAutofill="no"
             />
-        <androidx.appcompat.widget.SwitchCompat
+        <Switch
             android:id="@+id/widget_command_abbreviation_enabled"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
