--- a/app/src/main/res/layout/candidateentryview.xml
+++ b/app/src/main/res/layout/candidateentryview.xml
@@ -6,61 +6,79 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:paddingVertical="7sp"
     android:paddingHorizontal="15sp"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
+    android:paddingVertical="7sp"
+    android:orientation="vertical"
     android:duplicateParentState="true"
     android:focusable="false"
     android:focusableInTouchMode="false"
     >
-    <ImageView
-        android:id="@+id/candidateIconView"
-        android:layout_width="30sp"
-        android:layout_height="30sp"
-        android:layout_marginVertical="0sp"
-        android:layout_marginEnd="12sp"
-        android:padding="0sp"
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:importantForAccessibility="no"
-        tools:ignore="ContentDescription"
-        />
     <LinearLayout
-        android:id="@+id/candidateIntermediateLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:orientation="vertical"
-        android:paddingVertical="3sp"
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:padding="0px"
         >
-        <TextView
-            android:id="@+id/candidateTitleTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingTop="2sp"
-            android:paddingBottom="2sp"
+        <ImageView
+            android:id="@+id/candidateIconView"
+            android:layout_width="30sp"
+            android:layout_height="30sp"
+            android:layout_marginVertical="0sp"
+            android:layout_marginEnd="12sp"
+            android:padding="0sp"
             android:clickable="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:textColor="?bluelineconsoleBaseTextColor"
+            android:importantForAccessibility="no"
+            tools:ignore="ContentDescription"
             />
         <LinearLayout
-            android:id="@+id/candidatedetaillinearlistview"
+            android:id="@+id/candidateIntermediateLinearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:paddingStart="6sp"
-            android:paddingEnd="0sp"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical"
+            android:paddingVertical="3sp"
             android:clickable="false"
             android:focusable="false"
+            android:focusableInTouchMode="false"
             android:duplicateParentState="true"
-            />
+            >
+            <TextView
+                android:id="@+id/candidateTitleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingTop="2sp"
+                android:paddingBottom="2sp"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:textColor="?bluelineconsoleBaseTextColor"
+                />
+            <LinearLayout
+                android:id="@+id/candidatedetaillinearlistview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingStart="6sp"
+                android:paddingEnd="0sp"
+                android:orientation="vertical"
+                android:clickable="false"
+                android:focusable="false"
+                android:duplicateParentState="true"
+                />
+        </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/candidatelongdetaillinearlistview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="0sp"
+        android:orientation="vertical"
+        android:clickable="false"
+        android:focusable="false"
+        android:duplicateParentState="true"
+        />
 </LinearLayout>
