--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -162,4 +162,19 @@
             app:iconSpaceReserved="false"
             />
     </PreferenceCategory>
+    <PreferenceCategory
+        android:title="@string/preferences_category_about_this_app"
+        app:iconSpaceReserved="false"
+        >
+        <Preference
+            android:title="@string/preferences_item_about_this_app_github_repo"
+            android:summary="@string/preferences_item_about_this_app_github_repo_summary"
+            app:iconSpaceReserved="false"
+            >
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:data="https://github.com/nhirokinet/bluelineconsole"
+                />
+        </Preference>
+    </PreferenceCategory>
 </PreferenceScreen>
