--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -167,6 +167,12 @@
         app:iconSpaceReserved="false"
         >
         <Preference
+            android:key="dummy_pref_app_info"
+            android:title="@string/app_name"
+            android:icon="@mipmap/ic_launcher"
+            app:iconSpaceReserved="false"
+            />
+        <Preference
             android:title="@string/preferences_item_about_this_app_github_repo"
             android:summary="@string/preferences_item_about_this_app_github_repo_summary"
             app:iconSpaceReserved="false"
